# proxy-libintl

./: .gitignore  README.txt  libintl.c  libintl.h  meson.build  proxy-libintl.pc.in
